[project]
name = "isfirefly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "gradio",
    "httpx>=0.28.1",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "pillow",
    "tensorboard>=2.19.0",
    "torch==1.12.1+cu113",
    "torchvision==0.13.1+cu113",
    "tqdm",
]
